[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phenodp"
version = "2.0.0"
authors = [
    {name = "Tianlab-Bioinfo", email = "blwen24@m.fudan.edu.cn"},
]
description = "A comprehensive phenotype-driven diagnosis and prioritization toolkit"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
keywords = ["phenotype", "diagnosis", "HPO", "medical", "AI", "bioinformatics"]
dependencies = [
    "pyhpo==3.3.2",
    "torch==2.3.1",
    "torchaudio==2.3.1",
    "torchvision==0.18.1",
    "transformers",
    "dgl",
    "networkx",
    "tqdm",
    "pandas",
    "numpy",
    "obonet",
    "scipy",
    "accelerate",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["phenodp*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
phenodp = ["data/*.md"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[project.urls]
Homepage = "https://github.com/TianLab-Bioinfo/PhenoDP"
Documentation = "https://github.com/TianLab-Bioinfo/PhenoDP#readme"
Repository = "https://github.com/TianLab-Bioinfo/PhenoDP.git"
"Bug Tracker" = "https://github.com/TianLab-Bioinfo/PhenoDP/issues"

[project.scripts]
phenodp = "phenodp.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --strict-config --verbose" 